--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+		</head>
+		<body>
+		
+		<div class="questions">
+			<link rel="questions" href="style.css">
+		  <p>Who was the first female to become the governor of an Indian state?</p>
+		</div>
+		
+		<div class="questions">
+			<link rel="questions" href="style.css">
+		  <p>Who among first Woman to climb Mount Everest twice?</p>
+		</div>
+		
+		<div class="questions">
+			<link rel="questions" href="style.css">
+		  <p>Who is President of India?</p>
+		</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
