--- a/main.html
+++ b/main.html
@@ -10,19 +10,29 @@
 	<!-- the entire body must be written by student -->
 		</head>
 		<body>
+			<style>
+			.questions {
+    background-color: #f8fffe;
+    height: 50px; 
+    margin-top: 20px; 
+    padding: 15px; 
+    max-width: 600px;
+    border-left: 8px solid green
+  }
+			</style>
 		
 		<div class="questions">
-			<link rel="questions" href="style.css">
+			<!--link rel="questions" href="style.css"-->
 		  <p>Who was the first female to become the governor of an Indian state?</p>
 		</div>
 		
 		<div class="questions">
-			<link rel="questions" href="style.css">
+			<!--link rel="questions" href="style.css"-->
 		  <p>Who among first Woman to climb Mount Everest twice?</p>
 		</div>
 		
 		<div class="questions">
-			<link rel="questions" href="style.css">
+			<!--link rel="questions" href="style.css"-->
 		  <p>Who is President of India?</p>
 		</div>
     <script type="text/javascript" src="./script.js">
