--- a/main.html
+++ b/main.html
@@ -22,15 +22,14 @@
 			</style>
 		
 		<div class="questions">
-		  <p>Who was the first female to become the governor of an Indian state?</p>
+		  <p><blockquote>Who was the first female to become the governor of an Indian state?</blockquote></p>
 		</div>
 		
 		<div class="questions">
-		  <p>Who among first Woman to climb Mount Everest twice?</p>
+		  <p><blockquote>Who among first Woman to climb Mount Everest twice?</blockquote></p>
 		</div>
-		
 		<div class="questions">
-		  <p>Who is President of India?</p>
+		  <p><blockquote>Who is President of India?</blockquote></p>
 		</div>
     <script type="text/javascript" src="./script.js">
 </script>
