--- a/main.html
+++ b/main.html
@@ -20,20 +20,17 @@
     border-left: 8px solid green
   }
 			</style>
-		
-		<div class="questions">
-		  <p><blockquote>Who was the first female to become the governor of an Indian state?</blockquote></p>
-		</div>
-		
-		<div class="questions">
-		  <p><blockquote>Who among first Woman to climb Mount Everest twice?</blockquote></p>
-		</div>
-		<div class="questions">
-		  <p><blockquote>Who is President of India?</blockquote></p>
-		</div>
+		<blockquote class="questions">
+			<p>Who was the first female to become the governor of an Indian state?</p>
+		  </blockquote>
+		  <blockquote class="questions">
+			<p>Who among first Woman to climb Mount Everest twice?</p>
+		  </blockquote>
+		  <blockquote class="questions">
+			<p>Who is President of India?</p>
+		  </blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
-
 </body>
-
 </html>
+
